--- a/requirements.txt
+++ b/requirements.txt
@@ -11,10 +11,10 @@ requests==2.28.2
 scikit-image==0.19.3
 scipy==1.10.0
 seaborn==0.12.2
-streamlit==1.18
-streamlit_cropper==0.2.1
-streamlit_lottie==0.0.3
-streamlit_option_menu==0.3.2
+streamlit
+streamlit_cropper
+streamlit_lottie
+streamlit_option_menu
 tensorflow==2.9.0
 ipython
 pythreejs
