--- a/environment.yml
+++ b/environment.yml
@@ -25,206 +25,74 @@ dependencies:
   - pip:
       - absl-py==1.4.0
       - altair==4.1.0
-      - anyio==3.6.2
-      - argon2-cffi==21.3.0
-      - argon2-cffi-bindings==21.2.0
-      - arrow==1.2.3
       - asttokens==2.2.1
       - astunparse==1.6.3
       - attrs==22.2.0
       - backcall==0.2.0
-      - beautifulsoup4==4.12.0
       - bleach==6.0.0
-      - blinker==1.5
+      - blinker==1.6
+      - bokeh==2.4.3
       - cachetools==5.3.0
-      - cffi==1.15.1
       - charset-normalizer==3.1.0
       - click==8.1.3
-      - cmake==3.26.1
       - comm==0.1.3
       - contourpy==1.0.7
       - cycler==0.11.0
-      - czifile==2019.7.2
-      - debugpy==1.6.6
+      - debugpy==1.6.7
       - decorator==5.1.1
-      - defusedxml==0.7.1
-      - dominate==2.7.0
       - entrypoints==0.4
       - executing==1.2.0
-      - fastjsonschema==2.16.3
-      - filelock==3.10.4
       - flatbuffers==1.12
-      - fonttools==4.39.2
-      - fqdn==1.5.1
+      - fonttools==4.39.3
       - gast==0.4.0
       - gitdb==4.0.10
       - gitpython==3.1.31
-      - google-auth==2.16.3
+      - google-auth==2.17.2
       - google-auth-oauthlib==0.4.6
       - google-pasta==0.2.0
-      - grpcio==1.51.3
+      - grpcio==1.53.0
       - h5py==3.8.0
       - idna==3.4
-      - imageio==2.26.1
-      - importlib-metadata==6.1.0
+      - imageio==2.27.0
+      - importlib-metadata==6.2.0
       - ipydatawidgets==4.3.3
       - ipykernel==6.22.0
-      - ipython==8.4.0
-      - ipython-genutils==0.2.0
-      - ipywidgets==7.7.1
-      - isoduration==20.11.0
+      - ipython==8.12.0
+      - ipywidgets==8.0.6
       - jedi==0.18.2
       - jinja2==3.1.2
       - joblib==1.1.1
-      - jsonpointer==2.3
       - jsonschema==4.17.3
       - jupyter-client==8.1.0
       - jupyter-core==5.3.0
-      - jupyter-events==0.6.3
-      - jupyter-server==2.5.0
-      - jupyter-server-terminals==0.4.4
-      - jupyterlab-pygments==0.2.2
-      - jupyterlab-widgets==3.0.6
+      - jupyterlab-widgets==3.0.7
       - keras==2.9.0
       - keras-preprocessing==1.1.2
       - kiwisolver==1.4.4
       - libclang==16.0.0
-      - lit==16.0.0
-      - markdown==3.4.3
-      - markdown-it-py==2.2.0name: CellAlyse
-channels:
-  - defaults
-dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
-  - ca-certificates=2023.01.10=h06a4308_0
-  - certifi=2022.12.7=py39h06a4308_0
-  - ld_impl_linux-64=2.38=h1181459_1
-  - libffi=3.4.2=h6a678d5_6
-  - libgcc-ng=11.2.0=h1234567_1
-  - libgomp=11.2.0=h1234567_1
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - ncurses=6.4=h6a678d5_0
-  - openssl=1.1.1t=h7f8727e_0
-  - pip=23.0.1=py39h06a4308_0
-  - python=3.9.16=h7a1cb2a_2
-  - readline=8.2=h5eee18b_0
-  - setuptools=65.6.3=py39h06a4308_0
-  - sqlite=3.41.1=h5eee18b_0
-  - tk=8.6.12=h1ccaba5_0
-  - wheel=0.38.4=py39h06a4308_0
-  - xz=5.2.10=h5eee18b_1
-  - zlib=1.2.13=h5eee18b_0
-  - pip:
-      - absl-py==1.4.0
-      - altair==4.1.0
-      - anyio==3.6.2
-      - argon2-cffi==21.3.0
-      - argon2-cffi-bindings==21.2.0
-      - arrow==1.2.3
-      - asttokens==2.2.1
-      - astunparse==1.6.3
-      - attrs==22.2.0
-      - backcall==0.2.0
-      - beautifulsoup4==4.12.0
-      - bleach==6.0.0
-      - blinker==1.5
-      - cachetools==5.3.0
-      - cffi==1.15.1
-      - charset-normalizer==3.1.0
-      - click==8.1.3
-      - cmake==3.26.1
-      - comm==0.1.3
-      - contourpy==1.0.7
-      - cycler==0.11.0
-      - czifile==2019.7.2
-      - debugpy==1.6.6
-      - decorator==5.1.1
-      - defusedxml==0.7.1
-      - dominate==2.7.0
-      - entrypoints==0.4
-      - executing==1.2.0
-      - fastjsonschema==2.16.3
-      - filelock==3.10.4
-      - flatbuffers==1.12
-      - fonttools==4.39.2
-      - fqdn==1.5.1
-      - gast==0.4.0
-      - gitdb==4.0.10
-      - gitpython==3.1.31
-      - google-auth==2.16.3
-      - google-auth-oauthlib==0.4.6
-      - google-pasta==0.2.0
-      - grpcio==1.51.3
-      - h5py==3.8.0
-      - idna==3.4
-      - imageio==2.26.1
-      - importlib-metadata==6.1.0
-      - ipydatawidgets==4.3.3
-      - ipykernel==6.22.0
-      - ipython==8.4.0
-      - ipython-genutils==0.2.0
-      - ipywidgets==7.7.1
-      - isoduration==20.11.0
-      - jedi==0.18.2
-      - jinja2==3.1.2
-      - joblib==1.1.1
-      - jsonpointer==2.3
-      - jsonschema==4.17.3
-      - jupyter-client==8.1.0
-      - jupyter-core==5.3.0
-      - jupyter-events==0.6.3
-      - jupyter-server==2.5.0
-      - jupyter-server-terminals==0.4.4
-      - jupyterlab-pygments==0.2.2
-      - jupyterlab-widgets==3.0.6
-      - keras==2.9.0
-      - keras-preprocessing==1.1.2
-      - kiwisolver==1.4.4
-      - libclang==16.0.0
-      - lit==16.0.0
       - markdown==3.4.3
       - markdown-it-py==2.2.0
       - markupsafe==2.1.2
       - matplotlib==3.6.3
       - matplotlib-inline==0.1.6
       - mdurl==0.1.2
-      - mistune==2.0.5
-      - mpmath==1.3.0
-      - nbclassic==0.5.3
-      - nbclient==0.7.2
-      - nbconvert==7.2.10
-      - nbformat==5.8.0
       - nest-asyncio==1.5.6
-      - networkx==3.0
-      - notebook==6.5.3
-      - notebook-shim==0.2.2
+      - networkx==3.1
       - numpy==1.23.5
-      - nvidia-cublas-cu11==11.10.3.66
-      - nvidia-cuda-cupti-cu11==11.7.101
-      - nvidia-cuda-nvrtc-cu11==11.7.99
-      - nvidia-cuda-runtime-cu11==11.7.99
-      - nvidia-cudnn-cu11==8.5.0.96
-      - nvidia-cufft-cu11==10.9.0.58
-      - nvidia-curand-cu11==10.2.10.91
-      - nvidia-cusolver-cu11==11.4.0.1
-      - nvidia-cusparse-cu11==11.7.4.91
-      - nvidia-nccl-cu11==2.14.3
-      - nvidia-nvtx-cu11==11.7.91
       - oauthlib==3.2.2
       - opencv-python==4.7.0.68
       - opt-einsum==3.3.0
       - packaging==23.0
       - pandas==1.5.3
-      - pandocfilters==1.5.0
+      - panel==0.14.4
+      - param==1.13.0
       - parso==0.8.3
       - pexpect==4.8.0
       - pickleshare==0.7.5
       - pillow==9.4.0
-      - platformdirs==3.1.1
-      - plotly==5.14.0
+      - platformdirs==3.2.0
+      - plotly==5.14.1
       - pooch==1.7.0
-      - prometheus-client==0.16.0
       - prompt-toolkit==3.0.38
       - protobuf==3.19.6
       - psutil==5.9.4
@@ -233,210 +101,66 @@ dependencies:
       - pyarrow==11.0.0
       - pyasn1==0.4.8
       - pyasn1-modules==0.2.8
-      - pycparser==2.21
+      - pyct==0.5.0
       - pydeck==0.8.0
       - pygments==2.14.0
       - pyhdust==1.3.35
       - pympler==1.0.1
       - pyparsing==3.0.9
       - pyrsistent==0.19.3
-      - pyswarm==0.6
       - python-dateutil==2.8.2
-      - python-json-logger==2.0.7
-      - pythreejs==2.3.0
-      - pytz==2022.7.1
+      - pythreejs==2.4.2
+      - pytz==2023.3
       - pytz-deprecation-shim==0.1.0.post0
       - pyvista==0.37.0
+      - pyviz-comms==2.2.1
       - pywavelets==1.4.1
       - pyyaml==6.0
       - pyzmq==25.0.2
-      - read-lif==0.4.0
       - requests==2.28.2
       - requests-oauthlib==1.3.1
-      - rfc3339-validator==0.1.4
-      - rfc3986-validator==0.1.1
-      - rich==13.3.2
+      - rich==13.3.3
       - rsa==4.9
       - scikit-image==0.19.3
-      - scikit-learn==1.0.2
+      - scikit-learn==1.2.2
       - scipy==1.10.0
       - scooby==0.7.1
       - seaborn==0.12.2
-      - semver==2.13.0
-      - send2trash==1.8.0
+      - semver==3.0.0
       - six==1.16.0
       - smmap==5.0.0
-      - sniffio==1.3.0
-      - soupsieve==2.4
       - stack-data==0.6.2
-      - stpyvista==0.0.5
+      - stpyvista==0.0.7
       - streamlit==1.18.0
       - streamlit-cropper==0.2.1
       - streamlit-lottie==0.0.3
       - streamlit-option-menu==0.3.2
-      - sympy==1.11.1
       - tenacity==8.2.2
       - tensorboard==2.9.1
       - tensorboard-data-server==0.6.1
       - tensorboard-plugin-wit==1.8.1
       - tensorflow==2.9.0
       - tensorflow-estimator==2.9.0
-      - tensorflow-io-gcs-filesystem==0.31.0
+      - tensorflow-io-gcs-filesystem==0.32.0
       - termcolor==2.2.0
-      - terminado==0.17.1
       - threadpoolctl==3.1.0
       - tifffile==2023.3.21
-      - tinycss2==1.2.1
       - toml==0.10.2
       - toolz==0.12.0
-      - torch==2.0.0
-      - torchvision==0.15.1
       - tornado==6.2
       - tqdm==4.65.0
       - traitlets==5.9.0
       - traittypes==0.2.1
-      - triton==2.0.0
       - typing-extensions==4.5.0
-      - tzdata==2022.7
+      - tzdata==2023.3
       - tzlocal==4.3
-      - uri-template==1.2.0
       - urllib3==1.26.15
       - validators==0.20.0
       - vtk==9.2.6
       - watchdog==3.0.0
       - wcwidth==0.2.6
-      - webcolors==1.12
       - webencodings==0.5.1
-      - websocket-client==1.5.1
       - werkzeug==2.2.3
-      - widgetsnbextension==3.6.3
-      - wrapt==1.15.0
-      - zipp==3.15.0
-
-      - markupsafe==2.1.2
-      - matplotlib==3.6.3
-      - matplotlib-inline==0.1.6
-      - mdurl==0.1.2
-      - mistune==2.0.5
-      - mpmath==1.3.0
-      - nbclassic==0.5.3
-      - nbclient==0.7.2
-      - nbconvert==7.2.10
-      - nbformat==5.8.0
-      - nest-asyncio==1.5.6
-      - networkx==3.0
-      - notebook==6.5.3
-      - notebook-shim==0.2.2
-      - numpy==1.23.5
-      - nvidia-cublas-cu11==11.10.3.66
-      - nvidia-cuda-cupti-cu11==11.7.101
-      - nvidia-cuda-nvrtc-cu11==11.7.99
-      - nvidia-cuda-runtime-cu11==11.7.99
-      - nvidia-cudnn-cu11==8.5.0.96
-      - nvidia-cufft-cu11==10.9.0.58
-      - nvidia-curand-cu11==10.2.10.91
-      - nvidia-cusolver-cu11==11.4.0.1
-      - nvidia-cusparse-cu11==11.7.4.91
-      - nvidia-nccl-cu11==2.14.3
-      - nvidia-nvtx-cu11==11.7.91
-      - oauthlib==3.2.2
-      - opencv-python==4.7.0.68
-      - opt-einsum==3.3.0
-      - packaging==23.0
-      - pandas==1.5.3
-      - pandocfilters==1.5.0
-      - parso==0.8.3
-      - pexpect==4.8.0
-      - pickleshare==0.7.5
-      - pillow==9.4.0
-      - platformdirs==3.1.1
-      - plotly==5.14.0
-      - pooch==1.7.0
-      - prometheus-client==0.16.0
-      - prompt-toolkit==3.0.38
-      - protobuf==3.19.6
-      - psutil==5.9.4
-      - ptyprocess==0.7.0
-      - pure-eval==0.2.2
-      - pyarrow==11.0.0
-      - pyasn1==0.4.8
-      - pyasn1-modules==0.2.8
-      - pycparser==2.21
-      - pydeck==0.8.0
-      - pygments==2.14.0
-      - pyhdust==1.3.35
-      - pympler==1.0.1
-      - pyparsing==3.0.9
-      - pyrsistent==0.19.3
-      - pyswarm==0.6
-      - python-dateutil==2.8.2
-      - python-json-logger==2.0.7
-      - pythreejs==2.3.0
-      - pytz==2022.7.1
-      - pytz-deprecation-shim==0.1.0.post0
-      - pyvista==0.37.0
-      - pywavelets==1.4.1
-      - pyyaml==6.0
-      - pyzmq==25.0.2
-      - read-lif==0.4.0
-      - requests==2.28.2
-      - requests-oauthlib==1.3.1
-      - rfc3339-validator==0.1.4
-      - rfc3986-validator==0.1.1
-      - rich==13.3.2
-      - rsa==4.9
-      - scikit-image==0.19.3
-      - scikit-learn==1.0.2
-      - scipy==1.10.0
-      - scooby==0.7.1
-      - seaborn==0.12.2
-      - semver==2.13.0
-      - send2trash==1.8.0
-      - six==1.16.0
-      - smmap==5.0.0
-      - sniffio==1.3.0
-      - soupsieve==2.4
-      - stack-data==0.6.2
-      - stpyvista==0.0.5
-      - streamlit==1.18.0
-      - streamlit-cropper==0.2.1
-      - streamlit-lottie==0.0.3
-      - streamlit-option-menu==0.3.2
-      - sympy==1.11.1
-      - tenacity==8.2.2
-      - tensorboard==2.9.1
-      - tensorboard-data-server==0.6.1
-      - tensorboard-plugin-wit==1.8.1
-      - tensorflow==2.9.0
-      - tensorflow-estimator==2.9.0
-      - tensorflow-io-gcs-filesystem==0.31.0
-      - termcolor==2.2.0
-      - terminado==0.17.1
-      - threadpoolctl==3.1.0
-      - tifffile==2023.3.21
-      - tinycss2==1.2.1
-      - toml==0.10.2
-      - toolz==0.12.0
-      - torch==2.0.0
-      - torchvision==0.15.1
-      - tornado==6.2
-      - tqdm==4.65.0
-      - traitlets==5.9.0
-      - traittypes==0.2.1
-      - triton==2.0.0
-      - typing-extensions==4.5.0
-      - tzdata==2022.7
-      - tzlocal==4.3
-      - uri-template==1.2.0
-      - urllib3==1.26.15
-      - validators==0.20.0
-      - vtk==9.2.6
-      - watchdog==3.0.0
-      - wcwidth==0.2.6
-      - webcolors==1.12
-      - webencodings==0.5.1
-      - websocket-client==1.5.1
-      - werkzeug==2.2.3
-      - widgetsnbextension==3.6.3
+      - widgetsnbextension==4.0.7
       - wrapt==1.15.0
       - zipp==3.15.0
