--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 altair==4.1.0
 joblib==1.1.1
 matplotlib==3.6.3
-numpy==1.20
+numpy==1.23.5
 opencv_python==4.7.0.68
 pandas==1.5.3
 Pillow==9.4.0
@@ -11,10 +11,10 @@ requests==2.28.2
 scikit-image==0.19.3
 scipy==1.10.0
 seaborn==0.12.2
-streamlit
-streamlit_cropper
-streamlit_lottie
-streamlit_option_menu
+streamlit==1.18
+streamlit_cropper==0.2.1
+streamlit_lottie==0.0.3
+streamlit_option_menu==0.3.2
 tensorflow==2.9.0
 ipython
 pythreejs
